--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
       <p>这是一款专为Pixel设备而编写的</p>
       <p>面对新手的刷机工具</p>
       <p>以下为软件截图</p>
-      <img src="src/Welcome.png">
-      <img src="src/root.png">
-      <img src="src/adb.png">
-      <img src="src/bl.png">
-      <img src="src/Welcome1.png">
-      <img src="src/driver.png">
+      <img src="src/Welcome.PNG">
+      <img src="src/root.PNG">
+      <img src="src/adb.PNG">
+      <img src="src/bl.PNG">
+      <img src="src/Welcome1.PNG">
+      <img src="src/driver.PNG">
       
-      <img src="src/rom.png">
-      <img src="src/about.png">
+      <img src="src/rom.PNG">
+      <img src="src/about.PNG">
 
 
       <footer class="site-footer">
