--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <h2 class="project-tagline">一款为Google Pixel系设备制作的刷机工具</h2>
       <a href="" class="btn">点击下载</a>
       <a href="http://marvl05.site:88/36yx" class="btn">联系我们</a>
-      <p><a href="src/donate.jpg" id="btn">请开发者喝奶茶</a></p>
+      <p><a href="https://github.com/marv1ee/marv1ee.github.io/blob/main/src/donate.jpg" id="btn">请开发者喝奶茶</a></p>
 
     </section>
 
