--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p>这是一款专为Pixel设备而编写的</p>
       <p>面对新手的刷机工具</p>
       <p>以下为软件截图</p>
-      <img src="https://github.com/marv1ee/marv1ee.github.io/blob/main/src/Welcome.PNG">
+      <img src="src/Welcome.PNG">
       <img src="https://github.com/marv1ee/marv1ee.github.io/blob/main/src/root.PNG">
       <img src="https://github.com/marv1ee/marv1ee.github.io/blob/main/src/adb.PNG">
       <img src="https://github.com/marv1ee/marv1ee.github.io/blob/main/src/bl.PNG">
