--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
       <p>面对新手的刷机工具</p>
       <p>以下为软件截图</p>
       <img src="src/Welcome.PNG">
-      <img src="https://github.com/marv1ee/marv1ee.github.io/blob/main/src/root.PNG">
-      <img src="https://github.com/marv1ee/marv1ee.github.io/blob/main/src/adb.PNG">
-      <img src="https://github.com/marv1ee/marv1ee.github.io/blob/main/src/bl.PNG">
-      <img src="https://github.com/marv1ee/marv1ee.github.io/blob/main/src/Welcome.PNG">
-      <img src="https://github.com/marv1ee/marv1ee.github.io/blob/main/src/driver.PNG">
-      <img src="https://github.com/marv1ee/marv1ee.github.io/blob/main/src/rom.PNG">
-      <img src="https://github.com/marv1ee/marv1ee.github.io/blob/main/src/about.PNG">
+      <img src="src/root.PNG">
+      <img src="src/adb.PNG">
+      <img src="src/bl.PNG">
+      <img src="src/Welcome.PNG">
+      <img src="src/driver.PNG">
+      <img src="src/rom.PNG">
+      <img src="src/about.PNG">
 
 
       <footer class="site-footer">
