--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <img src="src/root.PNG">
       <img src="src/adb.PNG">
       <img src="src/bl.PNG">
-      <img src="src/Welcome.PNG">
+      <img src="src/Welcome1.PNG">
       <img src="src/driver.PNG">
       <img src="src/rom.PNG">
       <img src="src/about.PNG">
